@@ -1,0 +1,44 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: vibank-back
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: vibank-back
+  template:
+    metadata:
+      labels:
+        app: vibank-back
+    spec:
+      containers:
+      - name: vibank-back
+        image: sockmal/vibank-back:1.3.0
+        env:
+          - name: MLAB_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: vibank-back-secret
+                key: mlabapikey
+        ports:
+        - containerPort: 3000
+        resources:
+          requests:
+            memory: "60Mi"
+            cpu: "50m"
+          limits:
+            memory: "256Mi"
+            cpu: "600m"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 15
+          periodSeconds: 60
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 15
+          periodSeconds: 60
