@@ -43,6 +43,9 @@ app.use(enableCORS); // Enabled to use CORS
 ///// DEFINE API METHODS/////
 /////////////////////////////
 
+// Get path api
+app.get("/", userController.getPathV1);
+
 // Get users by ID V1
 app.get("/vibank/v1/user/:id", userController.getUsersByIdV1);
 
