@@ -16,6 +16,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - __Get account oper by ID.__
 - __Get account opers by Id Account.__
 - __Post opers.__
+- __Continuous Deployment on k8s.__
 
 ## [1.2.0] - 2019-05-06
 ### Added
